--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -96,7 +96,7 @@ h1 {
     grid-row: 9 / 15;
 }
 
-.body-text:not(:last-child) {
+.work-description-paragraph:not(:last-child) {
     margin-bottom: 14px;
 } 
 
@@ -283,6 +283,7 @@ p {
 .fp-4 {
     grid-column: 2 / 12;
     grid-row: 44 / 46;
+    margin-top: 12px;
 }
 
 .visualize-goal {
@@ -295,11 +296,7 @@ p {
 .initial-goals {
     grid-column: 2 / 7;
     grid-row: 51 / 53;
-    width: 80%;
-}
-
-.fp-4 {
-    margin-top: 12px;
+    width: 90%;
 }
 
 .goal-list {
@@ -307,6 +304,8 @@ p {
     grid-row: 51 / 55;
     margin: 0px;
     padding: 0px;
+    width: 91%;
+    justify-self: right;
 }
 
 .goal-list-item:not(:last-child) {
@@ -441,13 +440,15 @@ p {
 .little-detail-1 {
     grid-column: 1 / 7;
     grid-row: 92 / 98;
-    width: 100%;
+    background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
+    background-size: cover;
+    background-position: center;
 }
 
 .line {
     height: 1px;
     width: 100%;
-    border: 1px solid #ffffff;
+    border: 1px solid #f5f5f5;
     background-color: #7d7d7d;
 }
 
@@ -472,8 +473,8 @@ p {
 .little-detail-1-2 {
     grid-column: 8 / 13;
     grid-row: 95 / 98;
-    width: 100%;
-    align-self: end;
+    background-image: url(/product-tour-and-smartx-community/image/little-detail-1-2.png);
+    background-size: cover;
 }
 
 .process-title-5 {
@@ -643,4 +644,662 @@ footer {
     border-top: 1px solid #c6c6c6;
     padding-top: 16px;
     align-self: end;
+}
+
+@media (max-width: 1112px) {
+    main {
+        gap: 17px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(125, 80px);
+        padding: 70px;
+    }
+    
+    header {
+        grid-column: 1 / 7;
+        grid-row: 1 / 5;
+        align-self: end;
+        justify-self: center;
+    }
+    
+    .header-image {
+        max-width: 1280px;
+    }
+    
+    h1 {
+        grid-column: 1 / 7;
+        grid-row: 6 / 8;
+        font-size: 38px;
+        line-height: 48px;
+        font-weight: normal;
+        letter-spacing: -1.5px;
+        margin: 0px;
+    }
+    
+    .bold-title {
+        letter-spacing: -1.5px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 7;
+        grid-row: 8 / 9;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 9 / 11;
+        color: #acacac;
+    }
+    
+    .info-content {
+        grid-column: 2 / 4;
+        grid-row: 9 / 11;
+        color: #000000;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 10px;
+    }
+    
+    .work-description {
+        grid-column: 4 / 7;
+        grid-row: 9 / 15;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 12px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 14 / 15;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        align-self: end;
+    }
+    
+    .link {
+        font-size: 13px;
+        line-height: 13px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 7;
+        grid-row: 15 / 16;
+    }
+    
+    .section-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 16 / 17;
+    }
+    
+    .product-tour-prototype {
+        grid-column: 1 / 7;
+        grid-row: 17 / 25;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        width: 100%;
+        height: 100%
+    }
+    
+    .paragraph-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .pt-1 {
+        grid-column: 1 / 3;
+        grid-row: 25 / 26;
+    }
+    
+    .fp-1 {
+        grid-column: 3 / 7;
+        grid-row: 25 / 26;
+    }
+    
+    .video-container-1 {
+        grid-column: 1 / 5;
+        grid-row: 27 / 33;
+    }
+    
+    .position-box-1 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-1 {
+        position: absolute;
+        width: 100%;
+        height: 92%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05), 0px 4px 18px rgba(0, 0, 0, 0.10);
+        z-index: 1;
+        overflow: hidden;
+        border-radius: 6px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .product-tour-video {
+        width: 100%;
+    }
+    
+    .feature-2 {
+        grid-column: 5 / 7;
+        grid-row: 27 / 29;
+    }
+    
+    .fp-2 {
+        margin-top: 9px;
+    }
+    
+    .feature-3 {
+        grid-column: 1 / 3;
+        grid-row: 34 / 36;
+    }
+    
+    .fp-3 {
+        margin-top: 9px;
+    }
+    
+    .video-container-2 {
+        grid-column: 3 / 7;
+        grid-row: 32 / 38;
+    }
+    
+    .position-box-2 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-2 {
+        position: absolute;
+        width: 100%;
+        height: 92%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05), 0px 4px 18px rgba(0, 0, 0, 0.10);
+        z-index: 2;
+        overflow: hidden;
+        border-radius: 6px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .smartx-community-video {
+        width: 100%;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 7;
+        grid-row: 38 / 39;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 39 / 40;
+    }
+    
+    .process-title-1 {
+        grid-column: 2 / 6;
+        grid-row: 40 / 41;
+        align-self: end;
+    }
+    
+    .subtitle {
+        font-size: 22px;
+        line-height: 22px;
+        letter-spacing: -0.2px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 31px;
+        line-height: 38px;
+        letter-spacing: -1px;
+        margin-top: 6px;
+        margin-bottom: 0px;
+    }
+    
+    .fp-4 {
+        grid-column: 2 / 6;
+        grid-row: 41 / 42;
+        margin-top: 9px;
+    }
+    
+    .visualize-goal {
+        grid-column: 2 / 6;
+        grid-row: 43 / 46;
+        width: 100%;
+        align-self: start;
+        margin-top: 15px;
+        position: relative;
+        top: -30px;
+    }
+    
+    .initial-goals {
+        grid-column: 2 / 6;
+        grid-row: 46 / 47;
+        width: 100%;
+    }
+    
+    .goal-list {
+        grid-column: 2 / 6;
+        grid-row: 47 / 50;
+        margin-top: 17px;
+        padding: 0px;
+        position: relative;
+        left: 15px;
+        width: 98%;
+    }
+
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 5px;
+    }
+    
+    .process-title-2 {
+        grid-column: 2 / 6;
+        grid-row: 51 / 52;
+        align-self: end;
+    }
+    
+    .fp-5 {
+        grid-column: 2 / 6;
+        grid-row: 52 / 54;
+    }
+    
+    .video-container-3 {
+        grid-column: 1 / 4;
+        grid-row: 54 / 57;
+        
+    }
+    
+    .position-box-3 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-3 {
+        position: absolute;
+        width: 100%;
+        height: 71%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 4px 12px rgba(0, 0, 0, 0.06);
+        overflow: hidden;
+        border-radius: 4px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .original-prototype-video {
+        width: 100%;
+    }
+    
+    .image-container-1 {
+        grid-column: 4 / 7;
+        grid-row: 54 / 57;
+    }
+    
+    .position-box-4 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-4 {
+        position: absolute;
+        width: 100%;
+        height: 71%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 4px 12px rgba(0, 0, 0, 0.06);
+        border-radius: 4px;
+        overflow: hidden;
+    }
+    
+    .original-prototype-2 {
+        width: 100%;
+    }
+    
+    .fp-6 {
+        grid-column: 2 / 6;
+        grid-row: 58 / 59;
+    }
+    
+    .video-container-4 {
+        grid-column: 2 / 6;
+        grid-row: 59 / 63;
+    }
+    
+    .position-box-5 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-5 {
+        position: absolute;
+        width: 100%;
+        height: 71.2%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.08), 0px 4px 14px rgba(0, 0, 0, 0.10);
+        overflow: hidden;
+        border-radius: 5px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .original-prototype-decision {
+        width: 100%;
+    }
+    
+    .process-title-3 {
+        grid-column: 2 / 6;
+        grid-row: 64 / 65;
+        align-self: end;
+        position: relative;
+        top: 23px;
+    }
+    
+    .fp-7 {
+        grid-column: 2 / 6;
+        grid-row: 65 / 66;
+        position: relative;
+        top: 23px;
+    }
+    
+    .varients-of-landing-page {
+        grid-column: 1 / 7;
+        grid-row: 67 / 71;
+        width: 100%;
+    }
+    
+    .process-title-4 {
+        grid-column: 2 / 6;
+        grid-row: 72 / 73;
+        align-self: end;
+        position: relative;
+        top: -5px;
+    }
+    
+    .fp-8 {
+        grid-column: 2 / 6;
+        grid-row: 73 / 74;
+        position: relative;
+        top: -5px;
+    }
+    
+    .detailed-work {
+        grid-column: 1 / 7;
+        grid-row: 75 / 80;
+        width: 100%;
+    }
+    
+    .little-detail-1 {
+        grid-column: 1 / 4;
+        grid-row: 81 / 86;
+        background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .line {
+        height: 1px;
+        width: 100%;
+        border: 1px solid #ffffff;
+        background-color: #7d7d7d;
+        position: relative;
+        top: 15px;
+    }
+    
+    .l-1 {
+        grid-column: 3 / 4;
+        grid-row: 81 / 82;
+        justify-self: left;
+        width: 137%;
+        align-self: end;
+        position: relative;
+        top: 18px;
+        right: 15px;
+    }
+    
+    .detail-description-1 {
+        grid-column: 4 / 7;
+        grid-row: 82 / 83;
+        justify-self: right;
+        width: 89%;
+        position: relative;
+        top: -11px;
+    }
+    
+    .fp-9 {
+        margin-top: 9px;
+    }
+    
+    .little-detail-1-2 {
+        grid-column: 4 / 7;
+        grid-row: 84 / 86;
+        background-image: url(/product-tour-and-smartx-community/image/little-detail-1-2.png);
+        background-size: cover;
+    }
+    
+    .process-title-5 {
+        grid-column: 2 / 6;
+        grid-row: 87 / 88;
+        position: relative;
+        top: -18px;
+    }
+    
+    .fp-10 {
+        grid-column: 2 / 6;
+        grid-row: 88 / 89;
+        position: relative;
+        top: -28px;
+    }
+    
+    .covers-video {
+        grid-column: 1 / 7;
+        grid-row: 90 / 94;
+        width: 100%;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 7;
+        grid-row: 94 / 95;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 2;
+        grid-row: 95 / 96;
+    }
+    
+    .process-title-6 {
+        grid-column: 2 / 6;
+        grid-row: 96 / 97;
+        min-width: 620px;
+    }
+    
+    .fp-11 {
+        grid-column: 2 / 6;
+        grid-row: 97 / 99;
+        position: relative;
+        top: -13px;
+    }
+    
+    .flow-container {
+        grid-column: 1 / 7;
+        grid-row: 99 / 105;
+        max-height: 480px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        background-color: #e5e5e5;
+    }
+    
+    .flow-container::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    
+    .flow-container::-webkit-scrollbar:horizontal {
+        height: 28px;
+    }
+    
+    .flow-container::-webkit-scrollbar-thumb {
+        border-radius: 14px;
+        border: 10px solid #e5e5e5;
+        background-color: rgba(0, 0, 0, .29);
+    }
+    
+    .flow {
+        height: 100%;
+    }
+    
+    .detail-description-2 {
+        grid-column: 2 / 4;
+        grid-row: 108 / 110;
+        position: relative;
+        top: -35px;
+    }
+    
+    .fp-12 {
+        margin-top: 9px;
+    }
+    
+    .l-2 {
+        grid-column: 3 / 4;
+        grid-row: 107 / 108;
+        z-index: 2;
+        width: 150%;
+        justify-self: center;
+        position: relative;
+        left: 3px;
+        bottom: 0px;
+        top: -3px;
+    }
+    
+    .package-sent {
+        grid-column: 4 / 7;
+        grid-row: 106 / 110;
+        max-width: 362px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.09), 0px 10px 30px rgba(0, 0, 0, 0.14);
+        border-radius: 6.83px;
+        z-index: 1;
+        position: relative;
+        top: -65px;
+    }
+    
+    .all-community-works {
+        grid-column: 1 / 7;
+        grid-row: 111 / 115;
+        width: 100%;
+    }
+    
+    .s-5 {
+        grid-column: 1 / 7;
+        grid-row: 115 / 116;
+    }
+    
+    .st-4 {
+        grid-column: 1 / 2;
+        grid-row: 116 / 117;
+    }
+    
+    .fp-13 {
+        grid-column: 2 / 6;
+        grid-row: 117 / 118;
+    }
+    
+    .owc-1 {
+        grid-column: 1 / 3;
+        grid-row: 119 / 122;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-1.png);
+    }
+    
+    .owc-2 {
+        grid-column: 3 / 5;
+        grid-row: 119 / 122;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-2.png);
+    }
+    
+    .owc-3 {
+        grid-column: 5 / 7;
+        grid-row: 119 / 122;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-3.png);
+    }
+    
+    .owc-4 {
+        grid-column: 1 / 3;
+        grid-row: 122 / 125;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-4.png);
+    }
+    
+    .owc-5 {
+        grid-column: 3 / 5;
+        grid-row: 122 / 125;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-5.png);
+    }
+    
+    .owc-6 {
+        grid-column: 5 / 7;
+        grid-row: 122 / 125;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-6.png);
+    }
+    
+    .other-works-container {
+        background-size: cover;
+        background-color: #000000;
+        background-position: center;
+    }
+    
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 125 / 126;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
 }
