--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -2727,7 +2727,7 @@ footer {
     main {
         gap: 10px;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(113, 68px);
+        grid-template-rows: repeat(119, 68px);
         padding: 30px;
     }
     
@@ -3170,55 +3170,57 @@ footer {
     
     .process-title-3 {
         grid-column: 1 / 3;
-        grid-row: 66 / 67;
+        grid-row: 63 / 64;
         align-self: end;
         position: relative;
-        top: 0px;
+        top: -40px;
     }
     
     .fp-7 {
         grid-column: 1 / 3;
-        grid-row: 62 / 63;
+        grid-row: 64 / 65;
         position: relative;
-        top: 40px;
+        top: -40px;
     }
     
     .varients-of-landing-page {
         grid-column: 1 / 3;
-        grid-row: 65 / 66;
-        align-self: center;
+        grid-row: 66 / 67;
+        align-self: start;
         width: 100%;
         position: relative;
-        top: -10px;
+        top: -30px;
     }
     
     .process-title-4 {
         grid-column: 1 / 3;
-        grid-row: 70 / 71;
-        align-self: end;
+        grid-row: 68 / 69;
+        align-self: start;
         position: relative;
-        top: -5px;
+        top: -10px;
     }
     
     .fp-8 {
         grid-column: 1 / 3;
-        grid-row: 67 / 68;
+        grid-row: 69 / 70;
         position: relative;
-        top: -5px;
+        top: -35px;
     }
     
     .detailed-work {
         grid-column: 1 / 3;
-        grid-row: 68 / 72;
+        grid-row: 71 / 72;
         align-self: center;
         width: 100%;
         position: relative;
-        top: 0px;
+        top: 25px;
     }
     
     .little-detail-1 {
-        grid-column: 1 / 2;
-        grid-row: 72 / 75;
+        grid-column: 1 / 3;
+        grid-row: 73 / 77;
+        position: relative;
+        top: 30px;
         background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
         background-size: cover;
         background-position: center;
@@ -3234,28 +3236,21 @@ footer {
     }
     
     .l-1 {
-        grid-column: 1 / 2;
-        grid-row: 72 / 73;
-        justify-self: right;
-        width: 35%;
-        align-self: end;
-        position: relative;
-        top: -30px;
-        right: -14px;
+        display: none;
     }
     
     .detail-description-1 {
-        grid-column: 2 / 3;
-        grid-row: 72 / 75;
+        grid-column: 1 / 3;
+        grid-row: 78 / 79;
         justify-self: right;
         align-self: center;
-        width: 94%;
+        width: 100%;
         position: relative;
-        top: 6px;
+        top: 3px;
     }
     
     .fp-9 {
-        margin-top: 7px;
+        margin-top: 6px;
     }
     
     .little-detail-1-2 {
@@ -3264,21 +3259,21 @@ footer {
     
     .process-title-5 {
         grid-column: 1 / 3;
-        grid-row: 76 / 77;
+        grid-row: 80 / 81;
         position: relative;
-        top: 0px;
+        top: 10px;
     }
     
     .fp-10 {
         grid-column: 1 / 3;
-        grid-row: 77 / 78;
+        grid-row: 81 / 83;
         position: relative;
-        top: -16px;
+        top: -10px;
     }
     
     .covers-video {
         grid-column: 1 / 3;
-        grid-row: 79 / 81;
+        grid-row: 84 / 85;
         width: 100%;
         position: relative;
         top: 0px;
@@ -3286,38 +3281,39 @@ footer {
     
     .s-4 {
         grid-column: 1 / 3;
-        grid-row: 82 / 83;
+        grid-row: 86 / 87;
         position: relative;
-        top: -30px;
+        top: 0px;
     }
     
     .st-3 {
         grid-column: 1 / 2;
-        grid-row: 83 / 84;
+        grid-row: 87 / 88;
         position: relative;
-        top: -30px;
+        top: 0px;
     }
     
     .process-title-6 {
         grid-column: 1 / 3;
-        grid-row: 84 / 85;
-        min-width: 20px;
+        grid-row: 88 / 89;
     }
     
     .fp-11 {
         grid-column: 1 / 3;
-        grid-row: 85 / 87;
+        grid-row: 89 / 90;
         position: relative;
-        top: 20px;
+        top: 0px;
     }
     
     .flow-container {
         grid-column: 1 / 3;
-        grid-row: 88 / 93;
+        grid-row: 92 / 100;
         max-height: 480px;
         overflow-x: scroll;
         overflow-y: hidden;
         background-color: #e5e5e5;
+        position: relative;
+        top: 30px;
     }
     
     .flow-container::-webkit-scrollbar {
@@ -3339,103 +3335,95 @@ footer {
     }
     
     .detail-description-2 {
-        grid-column: 1 / 2;
-        grid-row: 95 / 97;
+        grid-column: 1 / 3;
+        grid-row: 104 / 105;
         position: relative;
-        top: 20px;
+        top: 30px;
     }
     
     .fp-12 {
-        margin-top: 7px;
+        margin-top: 6px;
     }
     
     .l-2 {
-        grid-column: 1 / 2;
-        grid-row: 94 / 95;
-        z-index: 2;
-        width: 65%;
-        align-self: end;
-        justify-self: right;
-        position: relative;
-        left: 25px;
-        bottom: 0px;
-        top: 45px;
+        display: none;
     }
     
     .package-sent {
-        grid-column: 2 / 3;
-        grid-row: 94 / 97;
-        max-width: 50px;
+        grid-column: 1 / 3;
+        grid-row: 99 / 103;
+        max-width: 330px;
+        width: 100%;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.09), 0px 10px 30px rgba(0, 0, 0, 0.14);
         border-radius: 6.83px;
         z-index: 1;
         position: relative;
-        top: -35px;
+        top: 40px;
     }
     
     .all-community-works {
         grid-column: 1 / 3;
-        grid-row: 98 / 100;
+        grid-row: 107 / 108;
         align-self: end;
         width: 100%;
         position: relative;
-        top: -20px;
+        top: 20px;
     }
     
     .s-5 {
         grid-column: 1 / 3;
-        grid-row: 100 / 101;
+        grid-row: 108 / 109;
         position: relative;
-        top: 0px;
+        top: 10px;
     }
     
     .st-4 {
         grid-column: 1 / 2;
-        grid-row: 101 / 102;
+        grid-row: 109 / 110;
         position: relative;
-        top: 0px;
+        top: 10px;
     }
     
     .fp-13 {
         grid-column: 1 / 3;
-        grid-row: 102 / 103;
+        grid-row: 110 / 111;
         position: relative;
         top: 0px;
     }
     
     .owc-1 {
         grid-column: 1 / 2;
-        grid-row: 104 / 107;
+        grid-row: 113 / 115;
         background-image: url(/product-tour-and-smartx-community/image/other-works-1.png);
     }
     
     .owc-2 {
         grid-column: 2 / 3;
-        grid-row: 104 / 107;
+        grid-row: 113 / 115;
         background-image: url(/product-tour-and-smartx-community/image/other-works-2.png);
     }
     
     .owc-3 {
         grid-column: 1 / 2;
-        grid-row: 107 / 110;
+        grid-row: 115 / 117;
         background-image: url(/product-tour-and-smartx-community/image/other-works-3.png);
     }
     
     .owc-4 {
         grid-column: 2 / 3;
-        grid-row: 107 / 110;
+        grid-row: 115 / 117;
         background-image: url(/product-tour-and-smartx-community/image/other-works-4.png);
     }
     
     .owc-5 {
         grid-column: 1 / 2;
-        grid-row: 110 / 113;
+        grid-row: 117 / 119;
         background-image: url(/product-tour-and-smartx-community/image/other-works-5.png);
     }
     
     .owc-6 {
         grid-column: 2 / 3;
-        grid-row: 110 / 113;
+        grid-row: 117 / 119;
         background-image: url(/product-tour-and-smartx-community/image/other-works-6.png);
     }
     
@@ -3448,7 +3436,7 @@ footer {
     
     footer {
         grid-column: 1 / 3;
-        grid-row: 113 / 114;
+        grid-row: 119 / 120;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
